--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
         "altura",
+        "columna",
+        "dropdownmenu",
+        "perrito",
         "perro"
     ]
 }
